# imageboard

./: .gitignore  Makefile  README.md
api/: Cargo.toml
api/src/: db.rs  main.rs  upload.rs  view.rs
docker/: Dockerfile.actix  Dockerfile.yew  docker-compose.yaml
types/: Cargo.toml
types/src/: lib.rs
ui/: Cargo.toml  index.html  tailwind.config.js
ui/src/: main.rs
ui/src/components/: create_post.rs  index.rs  mod.rs  navbar.rs  post.rs
ui/styles/: output.css
