[package]
name = "kouchan-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path= "../types/" }
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.34"
web-sys = "0.3.61"
yew = { version = "0.20.0", features = ["csr"] }
getrandom = { version = "0.2", features = ["js"] }
yew-router = "0.17.0"
chrono = { version = "0.4.23", features = [ "wasmbind" ] }
stdweb = "0.4.20"
wasm-bindgen = "0.2.84"
yew-oauth2 = "0.5.0"
